# khp-hgb

./: .gitignore  180306ALG.psc  CMakeLists.txt  LCGRandomTest  LCGRandomTest.pas  ModLCGRandom.pas  ModLCGRandom.ppu  index.html  pi  rabhog.pas
ss18/: .directory
ss18/additional/: CanonicalSyntaxTree  CanonicalSyntaxTree.pas
ss18/adf/ex0/: rabhog
ss18/adf/ex00/: .directory
ss18/adf/ex01/: montecarlo  montecarlo.pas
ss18/adf/ex03/: TestPM
ss18/adf/ex06/: .directory
ss18/adf/ex1/: montecarloOwn
ss18/adf/ex10/: ModShapes.pas  TestShapes.pas
ss18/adf/ex11/: .directory  Main.pas  ModLex.pas  ModShapes.pas  ModSyn.pas  TestCalc  TestCalc.pas  TestShapes.pas  titanic.mov.txt
ss18/adf/ex12/: Bouncer1.pas
ss18/adf/ex3/: angabe
ss18/bsy/: .directory  abfahrt.txt  besucher  besucher2~  besucher4  coding.sh  email.sh  name.sh  shelltest.sh
ss18/bsy/0528/: OUTFILE_NAME  bp.sh  bplist.txt  crdir.sh  curr.txt  curriculum.sh  curriculum.txt  leute  sort_leute
ss18/bsy/0604/: sizes.sh
ss18/bsy/old/: besucher2  besucher3  example.txt  liste  pitfallsConv  pitfallsNew  python.py  script2  shellscript.sh  shelltest.sh  students.txt  weblinks  zuege.txt
ss18/bsy/test/: filterInfo.txt  filterInfo2.txt  informationExtraction.sh  sorted_temp.txt  wetter_at.txt
ss18/dem/: ALTER_Rezeptdatenbank.sql  CREATE_Rezeptdatenbank.sql
ss18/ex1/: 1.pas  ModLCGRandom.pas  ModLCGRandom.ppu  ModLCGReal.pas  ModLCGReal.ppu  montecarlo.pas  montecarloOwn.pas  statistics  statistics.pas
ss18/ex10/ue/: ue.md
ss18/ex2/: ModBinarySearchTree.pas  ModHashTableChaining.pas  ModHashTableChaining.ppu  ModHashTableLinearProbing.pas  ModHashTableLinearProbing.ppu  ModStringHash.ppu  Timer.ppu  WinGraph.pas  WordCounter  WordCounter.pas  WordReader.pas  WordReader.ppu
ss18/ex2/1/: HashTest  WordCounter.pas
ss18/ex2/2/: HashTest.pas  ModHash2.pas  ModHash3.pas  WordCounter  WordCounter.pas  WordReader.pas
ss18/ex3/: somethings  somethings.pas
ss18/ex4/1/: ModPatternMatching.pas  somethings  unsharp.pas
ss18/ex4/2/: somethings.pas
ss18/ex4/2b/: ModPatternMatchingUnsharp.pas  Recursion.pas  TestPM.pas  main.pas  somethings
ss18/ex5/a/: rle.pas
ss18/ex6.1/2/: ModCalcSynAbs.pas
ss18/ex6/1/: TestModStack  TestModStack.pas  TestModStackADT  TestModStackADT.pas  TestModVectorADT.pas  V_ADS.pas  V_ADT.pas
ss18/ex6/2/: Q_ADS.pas  TestModStack  TestModStack.pas
ss18/ex6/3/: ModStack_ADT.pas  ModStack_ADT2.pas  TestModStack
ss18/ex7/: MPI  ModCalcSyn.pas  TestCalc  TestCalc.pas
ss18/ex7/1/: MP_Lex.pas  PG_T.pas  ParseGen  ParseGen.pas  ParseGen_Lex.pas  ParseGen_Syn.pas
ss18/ex8/1/: .directory  2.mpc  MPC.pas  MPC_SS.pas  SVP.mp
ss18/ex8/2/: MPC  MPC_SS.pas  MPDC.pas  MP_Lex.pas  example.mp  example.mpc
ss18/ex8/test/: MPVM  example.mp
ss18/ex8/ue/: .directory  ue.txt
ss18/ex9/ue/: OOPPersons  OOPPersons.pas  ue.html  ue.md
ss18/tobesorted/: ModLCGRandom.ppu  WG_Test.pas  pi.pas  rabhog  skyTest.pas
ss19/cgb/ue/01/: CMakeLists.txt
ss19/cgb/ue/01/src/: main.cpp  main2.cpp
ss19/ssd/ex02/: Entlassungsbrief.xml  Entlassungsbrief.xsd  Entlassungsbrief_qualified.xsd  Entlassungsbrief_simple.xsd  (+2 more)
ss19/swe/190327/asgmt/: CMakeLists.txt
ss19/swe/190327/asgmt/src/: Node.h  Types.h  main.cpp  skipMap.h
ws18/: .directory
ws18/dem/: 3.sql  DES31_UE04_PAPESH.sql  DES31_UE05_PAPESH.sql  UE04.sql
ws18/swo/ex03/asgmt/src/pipe/: CMakeLists.txt  main.c
ws18/swo/ex03/ue/make/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  makefile
ws18/swo/ex03/ue/make/geo/: .depend  geo.c  geo.h  makefile  prg  prg.c  weight.c  weight.h
ws18/swo/ex04/asgmt/src/: CMakeLists.txt
ws18/swo/ex04/asgmt/src/lis/: CMakeLists.txt  main.c
ws18/swo/ex04/asgmt/src/team/: CMakeLists.txt  main.c  main.h  stackoperm.c  stackoperm.h
ws18/swo/ex05/asgmt/src/: CMakeLists.txt
ws18/swo/ex05/asgmt/src/adt/: al_adt.c  al_adt.h  am_adt.c  am_adt.h  lis.h  main.c  test.c
ws18/swo/ex05/asgmt/src/top/: main.c  top.c  top.h
ws18/swo/ex05/ue/: CMakeLists.txt  notes.md
ws18/swo/ex05/ue/list/: CMakeLists.txt  list_ads.c  list_ads.h  main.c
ws18/swo/ex05/ue/preproc/: preproc_test.c
ws18/swo/ex05/ue/struct/: struct_test.c
ws18/swo/ex06/asgmt/src/: CMakeLists.txt
ws18/swo/ex06/asgmt/src/tetris/: gameboard.c  gameboard.h  main.c  random.c  timer.c  timer.h  types.h
ws18/swo/ex07/asgmt/src/: CMakeLists.txt
ws18/swo/ex07/asgmt/src/adt/: graphT.cpp  vertexT.cpp
ws18/swo/ex07/asgmt/src/wmb/: car.cpp  wheel.h
ws18/swo/ex07/ue/: CMakeLists.txt
ws18/swo/ex07/ue/src/: main.cpp  rational.cpp  rational.h
ws18/swo/ex09/asgmt/: CMakeLists.txt
ws18/swo/ex09/asgmt/chess/: chessGame.cpp  chessGame.h  chessboard.cpp  chessboard.h  chessman.cpp  chessman.h  exceptions.h  gamemodes.cpp  global.h  main.cpp
ws18/swo/ex09/asgmt/chess/chessfigures/: bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h  symbols.h
ws18/swo/ex09/asgmt/src/deque/: deque.h  main.cpp
ws18/swo/ex10/asgmt/src/: CMakeLists.txt
ws18/swo/ex10/asgmt/src/deque/: deque.cpp  deque.h  main.cpp
ws18/swo/ex10/asgmt/src/draw/: main.cpp
ws18/swo/ex10/ue/: CMakeLists.txt
ws18/swo/ex10/ue/resourceManager/: main.cpp  resourceManager.h
ws18/swo/ex10/ue/simpleVect/: main.cpp  simpleVector.h
ws18/swo/ex10/ue/vector/: main.cpp  vector.h
ws18/swo/ex12/ue/minilib/: CMakeLists.txt
ws18/swo/ex12/ue/minilib/asteroids/: DrawApplication.h  DrawWindow.h  main.cpp
ws18/swo/ex12/ue/minilib/asteroids/drawables/: Asteroid.h  Laser.h  Shape.h  SpaceShip.h  asteroid.h  spaceShip.cpp  spaceShip.h
ws18/swo/ex12/ue/minilib/draw/src/: DrawApplication.h  DrawWindow.h  MenuBar.h  line.h  menuBar.h  shape.h
ws18/swo/ex12/ue/minilib/draw/src/shapes/: Ellipse.h  Line.h  Rectangle.h  Shape.h
ws18/swo/ex12/ue/minilib/intro/src/: main.cpp
ws18/swo/ex12/ue/minilib/list/src/: list.h  list.inl  listIter.h  listIter.inl  list_node.h  main.cpp
ws18/swo/ex12/ue/minilib/ml5/: CMakeLists.txt
ws18/swo/ex12/ue/minilib/ml5/inc/ml5/utility/: utility.h
(+292 files in other folders)
